<resources>
    <string name="app_name">RabidBeaver SSH</string>
    <string name="btn_safe">Install Safe</string>
    <string name="btn_danger">Install DANGEROUS</string>
    <string name="btn_set_auth_keyfile">Set keyfile</string>
    <string name="button_ok">OK</string>
    <string name="new_tunnel">Create new tunnel</string>
    <string name="label_auth_keys">authorized_keys:</string>
    <string name="btn_startsshd">Start SSHD</string>
    <string name="btn_stopsshd">Stop SSHD</string>
    <string name="btn_restartsshd">Restart SSHD</string>
    <string name="label_ip">IP Addresses:</string>
    <string name="settings">System</string>
    <string name="about">About</string>
    <string name="tunnels">Tunnels</string>
    <string name="tunnel_chooser">Tunnel Chooser</string>
    <string name="tunnel_service">Tunnel Service</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="start_hold">Toggle Hold</string>
    <string name="tunnel_edit">Edit</string>
    <string name="sshd_state">SSHD State:</string>
    <string name="sshd_state_running">RUNNING</string>
    <string name="sshd_state_stopped">STOPPED</string>
    <string name="launch">Start SSHD on boot:</string>
    <string name="check_install">Check System</string>
    <string name="system_state">Installation State:</string>
    <string name="system_state_uptodate">Up to date</string>
    <string name="system_state_outofdate">Out of date</string>
    <string name="system_state_notinstalled">Not installed</string>
    <string name="dangerlabel">* Install Dangerous is NOT RECOMMENDED!!!</string>
    <string name="danger_heading">Install Dangerous Libraries</string>
    <string name="danger_warning">\u0020In addition to the standard installation, this option will also install libcrypto.so, libssl.so, and libz.so.\n
        \n
        Most likely, your system already has these libraries installed. The replacement versions provided herein may be of different versions than the ones provided by your system. This could cause unpredictable failures in your system for anything that uses these libraries.\n
        \n
        Only proceed if you know what you are doing, and know how to reinstall your original versions of these libraries. We do not provide any backup mechanism.\n
        \n
        If anything goes wrong, you are on your own.</string>
    <string name="launch_note">* in order to start sshd on boot, it is necessary for you to grant a permanent authorization to this application for root access.</string>
    <string name="shpiel">\u0020This contains OpenSSH, hacked special for Android.\n
\n
The first thing to note, is that this is NOT a shell. This application does not store logins. This application does not provide you with a "direct" interface to log into an SSH server.\n
\n
The second thing to note, is that this REQUIRES both root access to your device, as well as busybox. If you don\'t know what either of those are, then this application is definitely not for you. Uninstall and move along&#8230;\n
\n
This application has two functions;\n
1) Installation of OpenSSH (and related) binaries to your system. Specifically, ssh, sshd, sftp, sftp-server, scp, ssh-keygen, openssl, and gzip. gzip wasn\'t the objective, but being a dependency, it came along for the ride.\n
2) Simple control over sshd.\n
\n
First thing, obviously, is installation. Open the "System" menu, and press "INSTALL SAFE". It should prompt you for root authorization, and then install all applicable commands and libraries to your system.\n
\n
Once installed, the commands mentioned will be accessible through any shell, such as Android Terminal Emulator, or adb.\n
\n
Android Terminal Emulator sets a custom application home directory $HOME to within its own data directory. As a result, it is able to store ssh data and configurations just like on any other Linux system. Other applications typically will NOT set a HOME directory, and as a result, will share root\'s data home directory of /data. They will NOT be able to store data or configurations unless you manually set a home directory using "export HOME=/path/to/home" to some path writable by that application.\n
\n
The main interface window:\n
First row provides sshd start, stop, and restart service buttons. Once the commands have been installed, these buttons will work.\n
Due to the fact that Android does not provide a console password manager, it is not possible to provide password login for sshd. It will be necessary to install public keys from other devices/users for whom access will be granted. These public keys can be added to the authorized_keys text field. When installing a new authorized_key, it is NOT necessary to restart sshd.\n
\n
Note that sshd operates at a console level independent of this application. If you leave this application, or even force kill it, sshd will continue to operate in the background. If you do not want this, don\'t forget to stop sshd before leaving.\n
\n
The only safe place to obtain this application is http://github.com/lbdroid/Android_SSH. If you found it anywhere else, then it has been compromised by eastern hackers or the NSA.</string>
	<string name="add_label_name">Name: </string>
	<string name="add_label_ssh_server">SSH Server: </string>
	<string name="add_label_ssh_port">SSH Port: </string>
	<string name="add_label_ssh_user">SSH User: </string>
	<string name="add_label_ssh_pubkey">SSH Public Key: </string>
	<string name="add_label_ssh_prikey">SSH Private Key: </string>
	<string name="add_gen_keys">Generate Keys</string>
	<string name="add_label_gen_keys">If using existing private key, public key may be left empty. Remember that the public key must be added to the SSH server\'s authorized_keys file for the user specified above. When you save the tunnel, the public key will be copied to your clipboard.</string>
	<string name="add_label_tun_host">Tunnel Host: </string>
	<string name="add_label_tun_port">Tunnel Host Port: </string>
	<string name="add_label_local_port">Tunnel Local Port: </string>
	<string name="add_label_rev_tunnel">Reverse Tunnel: </string>
	<string name="cv_label_direction">Direction: </string>
	<string name="tunnel_copy_pubkey">Copy Key</string>
</resources>
