<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/install_safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_safe" />

        <Button
            android:id="@+id/install_dangerous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_danger" />
        <View
            android:layout_width="1dp"
            android:layout_height="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launch"
                android:labelFor="@+id/launch" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/launch" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_note" />
    </LinearLayout>

</FrameLayout>